--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="SettingsActivity"></activity>
+        <activity android:name="FileListActivity"></activity>
     </application>
 
 </manifest>
